# ROS2_basics

install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/cpp_prac_pkg/lib/cpp_prac_pkg/: number_counter  number_publisher
install/cpp_prac_pkg/share/cpp_prac_pkg/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/my_cpp_pkg/lib/my_cpp_pkg/: add_two_ints_client  add_two_ints_client_no_oop  add_two_ints_server  hardware_status_publisher  my_node  robot_news_station  smartphone  template_node_cpp
install/my_cpp_pkg/share/my_cpp_pkg/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/my_py_pkg/share/my_py_pkg/: package.sh  package.xml
install/my_robot_interfaces/share/my_robot_interfaces/: package.sh
log/: latest_build
my_py_pkg/: package.xml  setup.py
my_py_pkg/my_py_pkg/: add_two_ints_client_no_oop.py  number_publisher.py
src/cpp_prac_pkg/: CMakeLists.txt
src/cpp_prac_pkg/src/: number_counter.cpp  number_publisher.cpp
src/install/: local_setup.sh  setup.bash  setup.sh
src/log/: latest_build
src/my_cpp_pkg/: CMakeLists.txt
src/my_cpp_pkg/src/: add_two_ints_client.cpp  add_two_ints_client_no_oop.cpp  add_two_ints_server.cpp  hardware_status_publisher.cpp  my_node.cpp  robot_news_station.cpp  smartphone.cpp  template_node_cpp.cpp
src/my_cpp_pkg/src/install/: local_setup.sh  setup.ps1  setup.sh  setup.zsh
src/my_cpp_pkg/src/log/: latest_build
src/my_py_pkg/: package.xml  setup.py
src/my_py_pkg/my_py_pkg/: add_two_ints_client.py  number_subscriber.py  smartphone.py  subscriber_solution.py  template_python_node.py
src/my_robot_interfaces/: CMakeLists.txt  package.xml
(+16 files in other folders)
